# sleighcraft

./: .gitattribute  .gitattributes  .gitignore  .gitmodules  Cargo.toml  DEV.md  README.md
.github/workflows/: linux-release.yaml  linux.yaml  publish-crates-io.yaml  publish-npm.yaml  publish-pypi.yaml  publish.yaml
bindings/: README.md
bindings/nodejs/: .gitignore  README.md  package.json
bindings/nodejs/lib/: index.js
bindings/nodejs/native/: Cargo.toml  build.rs
bindings/nodejs/native/src/: lib.rs
bindings/nodejs/test/: index.spec.js
bindings/python/: .gitignore  Cargo.toml  README.md
bindings/python/bincraft/: __init__.py
bindings/python/src/: lib.rs
bindings/python/test/: disasm.py
ghidracraft/: .gitignore  .project  README.md  build.gradle  extension.properties
querycraft/: Cargo.toml  README.md
querycraft/doc/: future.md
querycraft/src/: funcs.rs  lib.rs  util.rs
querycraft/src/funcs/: disasm.rs  dummy.rs  load.rs
sleighcraft/: Cargo.toml  README.md  build.rs
sleighcraft/src/: error.rs  lib.rs  prelude.rs  sleigh.rs
sleighcraft/src/cpp/: .gitignore  CMakeLists.txt  grammar.cc  loadimage.hh  xml.y
sleighcraft/src/cpp/bridge/: disasm.cpp  disasm.h  proxies.h
sleighcraft/src/cpp/bridge/proxies/: address_proxy.cc  address_proxy.hh  addrspace_proxy.cc  addrspace_proxy.hh  block_proxy.cc  block_proxy.hh  cover_proxy.cc  cover_proxy.hh  funcdata_proxy.cc  funcdata_proxy.hh  loadimage_proxy.cc  loadimage_proxy.hh  opbehavior_proxy.cc  opbehavior_proxy.hh  opcode_proxy.cc  opcode_proxy.hh  opcodes_proxy.cc  opcodes_proxy.hh  typeop_proxy.cc  typeop_proxy.hh  variable_proxy.cc  variable_proxy.hh  varnode_proxy.cc  varnode_proxy.hh  varnodedata_proxy.cc  varnodedata_proxy.hh
sleighcraft/src/sla/: 6502.sla  68020.sla  68030.sla  68040.sla  6805.sla  6809.sla  80251.sla  80390.sla  8048.sla  8051.sla  8085.sla  ARM4_be.sla  ARM4_le.sla  ARM4t_be.sla  ARM4t_le.sla  ARM5_be.sla  ARM5_le.sla  ARM5t_be.sla  ARM5t_le.sla  CP1600.sla  CR16B.sla  CR16C.sla  Dalvik.sla  HC05.sla  HC08.sla  HCS08.sla  JVM.sla  MCS96.sla  PIC24E.sla  PIC24H.sla  README.md  SparcV9_32.sla  SparcV9_64.sla  SuperH4_be.sla  SuperH4_le.sla  TI_MSP430.sla  TI_MSP430X.sla  V850.sla  avr8.sla  avr8e.sla  (+36 more)
sleighcraft/test/: test.sla
sleighcraft/tests/: mod.rs
sleighcraft_util_macro/: Cargo.toml  README.md
sleighcraft_util_macro/src/: lib.rs
