[package]
name = "querycraft"
version = "0.1.0"
authors = ["Anciety <anciety@starcross.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sleighcraft = { path = "../sleighcraft" }
rand = "0.8"
goblin = "0.4.0"

[dependencies.rusqlite]
# This is a temp solution, before dynamic extension is merged.
git = "https://github.com/Genomicsplc/rusqlite.git"
branch = "loadable-extensions"
default-features = false
features = ["loadable_extension", "vtab", "functions", "bundled"]


[lib]
crate-type = ["cdylib"]