[package]
name = "sleighcraft"
version = "0.1.0"
authors = ["Anciety <anciety@starcross.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
once_cell = "1.6.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]


[build-dependencies]
cxx-build = "1.0"
filetime = "0.2" # for incremental compilation

[features]
# enable predefined specifications, i.e, those defined within official ghidra
default = ["predefined"]
predefined = []