[package]
name = "sleighcraft"
version = "0.1.1-dev2"
authors = ["Anciety <anciety@starcross.cn>"]
edition = "2018"
description = "Binary Analysis Craft"
license = "Apache-2.0"
keywords = ["disassemble", "binary-analysis"]
repository = "https://github.com/ret2lab/bincraft/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
once_cell = "1.6.0"
num_enum = "0.5.1"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]


[build-dependencies]
cxx-build = "1.0"
filetime = "0.2" # for incremental compilation

[features]
# enable predefined specifications, i.e, those defined within official ghidra
default = ["predefined"]
predefined = []